// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Composer > Snapshots > matches snapshot in idle state 1`] = `
"
                                                                                    ? for shortcuts
────────────────────────────────────────────────────────────────────────────────────────────────────
                                 StatusDisplay    Prompt tokens ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 0.0%
 ApprovalModeIndicator: default                   0 / 128.0K tokens | 128.0K remaining
InputPrompt:   Type your message or @path/to/file
Footer
"
`;

exports[`Composer > Snapshots > matches snapshot in minimal UI mode 1`] = `
"                                                                           press tab twice for more
InputPrompt:   Type your message or @path/to/file
"
`;

exports[`Composer > Snapshots > matches snapshot in minimal UI mode while loading 1`] = `
"LoadingIndicator                                                           press tab twice for more
InputPrompt:   Type your message or @path/to/file
"
`;

exports[`Composer > Snapshots > matches snapshot in narrow view 1`] = `
"
                        ? for shortcuts
────────────────────────────────────────
                            ░░░░░░░░░
                      Prompt░░░░░░░░0.0
                     tokens ░░░░░░░░%
 ApprovalModeStatus         ░░░
 Indicator:  Displa    0 /   |128.0K
 default     y         128.0K remaining
                       tokens


InputPrompt:   Type your message or
@path/to/file
Footer
"
`;

exports[`Composer > Snapshots > matches snapshot while streaming 1`] = `
"
 LoadingIndicator: Thinking ⠋ ▌                                                     ? for shortcuts
────────────────────────────────────────────────────────────────────────────────────────────────────
                                 StatusDisplay    Prompt tokens ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 0.0%
 ApprovalModeIndicator: default                   0 / 128.0K tokens | 128.0K remaining
InputPrompt:   Type your message or @path/to/file
Footer
"
`;
